<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/my_accent" />

    <EditText
        android:id="@+id/saved_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_save_title_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSmall"
        android:text="@string/url"
        android:textColor="@color/my_accent" />

    <EditText
        android:id="@+id/saved_url_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_save_url_hint" />

</LinearLayout>