<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.leonardoxh.customfont.FontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textColor="@color/my_text"
        android:textSize="@dimen/textSizeHumongous"
        app:font="gridnik" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/marginBig"
        android:orientation="vertical">

        <com.github.leonardoxh.customfont.FontText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeFontSize"
            android:textColor="@color/my_accent"
            android:textSize="@dimen/textSizeBig"
            app:font="gridnik" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/titleFontSizeSpinnerMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tutorial_splash_title_font"
            app:met_floatingLabel="normal" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/bodyFontSizeSpinnerMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tutorial_splash_body_font"
            app:met_floatingLabel="normal" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rippleResetDbBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBig">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginBottom="@dimen/marginSmall">

                <com.github.leonardoxh.customfont.FontText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resetDatabase"
                    android:textColor="@color/my_accent"
                    android:textSize="@dimen/textSizeBig"
                    app:font="gridnik" />

                <com.github.leonardoxh.customfont.FontText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resetDatabaseDesc"
                    android:textColor="@color/my_text_light"
                    android:textSize="@dimen/textSizeSmall"
                    app:font="bitterregular" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rippleResetPinBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBig">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginBottom="@dimen/marginSmall">

                <com.github.leonardoxh.customfont.FontText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resetPIN"
                    android:textColor="@color/my_accent"
                    android:textSize="@dimen/textSizeBig"
                    app:font="gridnik" />

                <com.github.leonardoxh.customfont.FontText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resetPINDesc"
                    android:textColor="@color/my_text_light"
                    android:textSize="@dimen/textSizeSmall"
                    app:font="bitterregular" />

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

        <!--<EditText
            android:id="@+id/saved_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_save_title_hint" />-->

    </LinearLayout>

</LinearLayout>