<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/paddingBig">

            <com.github.leonardoxh.customfont.FontText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginSmall"
                android:gravity="center_horizontal"
                android:text="@string/pin_splash_title"
                android:textColor="@color/my_text"
                android:textSize="@dimen/textSizeHuge"
                app:font="gridnik" />

            <com.github.leonardoxh.customfont.FontText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginSmall"
                android:gravity="center_horizontal"
                android:text="@string/pin_splash_desc"
                android:textColor="@color/my_text"
                android:textSize="@dimen/textSizeHuge"
                app:font="gridnik" />

            <EditText
                android:id="@+id/userPinTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBig"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:gravity="center_horizontal"
                android:hint="@string/pin_hint" />

            <Button
                android:id="@+id/btnSavePin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBig"
                android:layout_gravity="center_horizontal"
                android:text="@string/save_pin" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>