<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher" />

    <!--<com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/rippleImgBtnMinx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" />

    </com.balysv.materialripple.MaterialRippleLayout>-->

    <com.github.leonardoxh.customfont.FontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about_me"
        android:textColor="@color/my_text"
        android:textSize="@dimen/textSizeBig"
        app:font="gridnik" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marginSmall"
            android:text="@string/btn_github"
            android:textColor="@color/md_blue_500" />

        <Button
            android:id="@+id/btn_google_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginSmall"
            android:layout_marginRight="@dimen/marginSmall"
            android:text="@string/btn_google_plus"
            android:textColor="@color/md_red_500" />

        <Button
            android:id="@+id/btn_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginSmall"
            android:text="@string/btn_mail"
            android:textColor="@color/md_green_500" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/marginBig"
        android:layout_marginLeft="@dimen/marginSmall"
        android:layout_marginRight="@dimen/marginSmall"
        android:layout_marginTop="@dimen/marginBig"
        android:background="?android:attr/listDivider" />

    <com.github.leonardoxh.customfont.FontText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSmall"
        android:layout_marginRight="@dimen/marginSmall"
        android:text="@string/libraries_used"
        android:textColor="@color/my_text"
        android:textSize="@dimen/textSizeHuge"
        app:font="gridnik" />

    <ListView
        android:id="@+id/libraries_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/marginSmall"
        android:layout_marginLeft="@dimen/marginSmall"
        android:layout_marginRight="@dimen/marginSmall" />

</LinearLayout>