<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.chdev.ks.minx.ErrorActivity"
    android:background="@color/my_background">

    <LinearLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.github.leonardoxh.customfont.FontText
            android:id="@+id/welcome_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/error_title"
            android:textColor="@color/my_text"
            android:textSize="@dimen/textSizeHumongous"
            app:font="gridnik" />

        <com.github.leonardoxh.customfont.FontText
            android:id="@+id/welcome_body_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_body"
            android:textColor="@color/my_text"
            android:textSize="@dimen/textSizeBig"
            android:layout_marginLeft="@dimen/marginSmall"
            android:layout_marginRight="@dimen/marginSmall"
            android:layout_marginTop="@dimen/marginBig"
            android:layout_marginBottom="@dimen/marginSmall"
            app:font="bitterregular" />


        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageFace"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/error_face" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginBig"
                android:text="@string/btn_restart_app"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
