<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chdev.ks.minx.SplashActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/splashViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/marginBig"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/indicator"
            android:layout_width="@dimen/indicatorSize"
            android:layout_height="@dimen/indicatorSize"
            android:layout_centerInParent="true"
            android:padding="@dimen/paddingBig"
            android:src="@drawable/indicator_1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripplePrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="@dimen/paddingSmall"
            android:paddingLeft="@dimen/paddingBig"
            android:paddingRight="@dimen/paddingBig"
            android:paddingTop="@dimen/paddingSmall">

            <com.github.leonardoxh.customfont.FontText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/previous"
                android:textColor="@color/my_gray"
                android:textSize="@dimen/textSizeSmall"
                app:font="bitterregular" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rippleNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/paddingSmall"
            android:paddingLeft="@dimen/paddingBig"
            android:paddingRight="@dimen/paddingBig"
            android:paddingTop="@dimen/paddingSmall">

            <com.github.leonardoxh.customfont.FontText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/next"
                android:textColor="@color/my_gray"
                android:textSize="@dimen/textSizeSmall"
                app:font="bitterregular" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rippleOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/paddingSmall"
            android:paddingLeft="@dimen/paddingBig"
            android:paddingRight="@dimen/paddingBig"
            android:paddingTop="@dimen/paddingSmall"
            android:visibility="gone">

            <com.github.leonardoxh.customfont.FontText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/Ok"
                android:textColor="@color/my_gray"
                android:textSize="@dimen/textSizeSmall"
                app:font="bitterregular" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>

</RelativeLayout>
